# circuit-forge-desktop

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  README_CN.md  index.html  package.json
src/: DesktopOverlay.tsx  FloatingToolbar.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/circuit/: component.rs  graph.rs  junction.rs  mod.rs  pin.rs  subcircuit.rs  types.rs  wire.rs
src-tauri/src/commands/: benchmark_cmds.rs  circuit_cmds.rs  custom_cmds.rs  debug_cmds.rs  keybinding_cmds.rs  mod.rs  packaging_cmds.rs  plugin_cmds.rs  project_cmds.rs  simulation_cmds.rs  skin_cmds.rs  window_cmds.rs  workshop_cmds.rs
src-tauri/src/debugging/: breakpoint.rs
src-tauri/src/keybindings/: mod.rs
src-tauri/src/packaging/: circuitforge.rs  mod.rs  snapshot.rs
src-tauri/src/plugins/: api.rs  loader.rs  manifest.rs  mod.rs
src-tauri/src/project/: export.rs  load.rs  mod.rs  save.rs
src-tauri/src/rules/: presets.rs
src-tauri/src/scripting/: lua_engine.rs  mod.rs  sandbox.rs  validator.rs
src-tauri/src/simulation/: engine.rs  evaluator.rs  mod.rs  tick_engine.rs
src-tauri/src/skin/: mod.rs  pack.rs  types.rs
src-tauri/src/verification/: mod.rs  truth_table.rs  verifier.rs
src-tauri/src/workshop/: fetch.rs  mod.rs  types.rs
src/ipc/: circuitIpc.ts  projectIpc.ts  simulationIpc.ts  windowIpc.ts
src/panels/: ComponentPanel.tsx
src/render/: Camera.ts  GateImages.ts  Renderer.ts
src/stores/: circuitStore.ts  historyStore.ts  overlayStore.ts  simStore.ts
(+4 files in other folders)
