[package]
name = "circuit-forge-desktop"
version = "0.1.0"
description = "Desktop-overlay logic circuit sandbox"
authors = ["Zw-awa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "circuit_forge_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
mlua = { version = "0.11", features = ["lua54", "vendored", "serialize", "send"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2.4"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
rayon = "1.10"

